colcon_ws/log/build_2022-09-10_07-02-59/dasc_robot/stdout_stderr.log
-- Found ament_cmake: 0.9.9 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 2.4.0 (/opt/ros/foxy/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.2.1 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.3 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found tf2: 0.13.12 (/opt/ros/foxy/share/tf2/cmake)
-- Found tf2_ros: 0.13.12 (/opt/ros/foxy/share/tf2_ros/cmake)
-- Found px4_msgs: 2.0.1 (/root/colcon_ws/install/px4_msgs/share/px4_msgs/cmake)
-- Found sensor_msgs: 2.0.4 (/opt/ros/foxy/share/sensor_msgs/cmake)
-- Found eigen3_cmake_module: 0.1.1 (/opt/ros/foxy/share/eigen3_cmake_module/cmake)
-- Found px4_ros_com: 0.1.0 (/root/colcon_ws/install/px4_ros_com/share/px4_ros_com/cmake)
-- Found dasc_msgs: 0.0.0 (/root/colcon_ws/install/dasc_msgs/share/dasc_msgs/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /root/colcon_ws/build/dasc_robot
[ 11%] Built target dascBots
[35m[1mScanning dependencies of target trajectory_follower[0m
[ 16%] [32mBuilding CXX object CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o[0m
[ 61%] Built target example_control_geometric_velocity
[ 61%] Built target example_control_multi_rover
[ 61%] Built target example_control
[ 61%] Built target example_control_geometric_acceleration
[ 72%] Built target example_control_geometric
[ 83%] Built target joystick_controller
[ 94%] Built target dasc_robot_lib
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In constructor ‘TrajectoryFollower::TrajectoryFollower(std::shared_ptr<DASCRobot>)’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:25:40: error: ‘traj_callback’ is not a member of ‘TrajectoryFollower’
   25 |         std::bind(&TrajectoryFollower::traj_callback, this, _1));
      |                                        ^~~~~~~~~~~~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::set_takeoff_traj()’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:87:43: error: ‘using SharedPtr = class std::shared_ptr<rclcpp::Clock>’ {aka ‘class std::shared_ptr<rclcpp::Clock>’} has no member named ‘now’
   87 |     traj.header.stamp = this->get_clock().now();
      |                                           ^~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::timer_callback()’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:125:46: error: invalid use of non-static member function ‘rclcpp::Time rclcpp::Node::now() const’
  125 |     std::chrono::duration<double> dur = (now - traj.header.stamp);
      |                                          ~~~~^~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/foxy/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:22,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/robot-framework/include/dasc_robot/DASCRobots.hpp:6,
                 from /root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:2:
/opt/ros/foxy/include/rclcpp/node.hpp:1025:3: note: declared here
 1025 |   now() const;
      |   ^~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:138:20: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<double, std::allocator<double> >::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
  138 |    for (int i=0; i < traj.ts.size(); i++){
      |                  ~~^~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/trajectory_follower.dir/build.make:63: CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:94: CMakeFiles/trajectory_follower.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
